# dragonbot

./: README.md  setup.cfg
docs/: dc.txt
dragonbot/: __init__.py  __main__.py  conf.py  main.py
dragonbot/cogs/: code.py
dragonbot/data/: tests.txt
dragonbot/lib/: dragon.py  maps.py  nommer.py  parser.py  utils.py
dragonbot/lib/nommer/: __init__.py  activityindex.py  age.py  appendages.py  breathweapon.py  colouration.py  diet.py  dragonfriend.py  fruitiness.py  gender.py  hoardsize.py  huggability.py  humourindex.py  irritability.py  length.py  magicalability.py  matingstatus.py  monetaryphilosophy.py  nativeland.py  offspring.py  psypower.py  realityindex.py  skintype.py  sociallife.py  species.py  technology.py  ubiquity.py  weight.py  width.py
tests/: test_code.py
