[metadata]
name = dragonbot
version = 1.0.0
description = Dragon Bot
long_description = file: README.md
long_description_content_type = text/markdown
author = DigiDuncan & Natalie Fearnley
author_email = nfearnley@gmail.com
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
keywords = dragon code bot discord
project_urls =
    Source=https://github.com/nfearnley/dragonbot
    Tracker=https://github.com/nfearnley/dragonbot/issues

[options]
packages = find:
python_requires = >=3.8
zip_safe = yes
install_requires =
    discord.py==1.7.2
    toml==0.10.2
    appdirs==1.4.4

[options.extras_require]
dev =
    autopep8==1.5.7
    flake8==3.9.2
    pytest==6.2.4

[options.entry_points]
console_scripts =
    dragonbot=dragonbot.__main__:main

[flake8]
ignore = E501
per-file-ignores =
    */__init__.py:F401,F403
